Fixed merged issues

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -27,5 +27,9 @@
     }
   },
   "https_port": 443,
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowedOrigins": [
+    "http://localhost:3000",
+    "http://ibs.novalabs.lk/"
+  ]
 }
