--- a/.gitignore
+++ b/.gitignore
@@ -335,3 +335,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# Application configuration files
+appsettings.json
+appsettings.*.json
